--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,103 +20,20 @@ Released   : 20130406
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <title>Vestibule  by FCT</title>
+  <title>..:: Cardápio Onsee  ::..</title>
   <link href="http://fonts.googleapis.com/css?family=Oxygen:400,700,300" rel="stylesheet" type="text/css" />
 </head>
 <body>
-<div id="wrapper">
-  <div id="menu-wrapper">
-    <div id="menu" class="container">
-    <ul>
-        <li class="current_page_item"><a href="#">Homepage</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Photos</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Links</a></li>
-        <li><a href="#">Contact Us</a></li>
-    </ul>
+  <div id="wrapper">
+    <%= render 'shared/menu' %>
+    <div id="page" class="container">
+      <%= render 'shared/slogan' %>
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+      <p style="text-align: center"> <%= link_to 'CADASTRE-SE JÁ!', new_user_registration_path, class: 'button' %></p>
+      <%= yield %>
     </div>
   </div>
-  <div id="logo" class="container">
-    <h1><a href="#">Vestibule</a></h1>
-    <p>In posuere eleifend odio quisque semper augue.</p>
-  </div>
-  <div id="page" class="container">
-    <div>
-      <div class="entry">
-        <p>This is <strong>Vestibule </strong>, a free, fully standards-compliant CSS template designed by <a href="http://www.freecsstemplates.org/" rel="nofollow">FreeCSSTemplates.org</a>.     The photos in this template are from <a href="http://fotogrph.com/"> Fotogrph</a>. This free template is released under a <a href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attributions 3.0</a> license, so you are pretty much free to do whatever you want with it (even use it commercially) provided you keep the links in the footer intact. Aside from that, have fun with it :) </p>
-      </div>
-    </div>
-  </div>
-  <div id="three-column" class="container">
-    <div class="tbox1">
-      <div class="box-style box-style01">
-        <div class="content">
-          <div class="image"><img src="images/img01.jpg" width="324" height="200" alt="" /></div>
-          <h2>Fusce ultrices fringilla</h2>
-          <p>Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh. </p>
-          <a href="#" class="button">Learn More</a>
-        </div>
-      </div>
-    </div>
-    <div class="tbox2">
-      <div class="box-style box-style02">
-        <div class="content">
-          <div class="image"><img src="images/img02.jpg" width="324" height="200" alt="" /></div>
-          <h2>Mauris vulputate dolor</h2>
-          <p>Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh. </p>
-          <a href="#" class="button">Learn More</a>
-        </div>
-      </div>
-    </div>
-    <div class="tbox3">
-      <div class="box-style box-style03">
-        <div class="content">
-          <div class="image"><img src="images/img03.jpg" width="324" height="200" alt="" /></div>
-          <h2>Nulla luctus eleifend </h2>
-          <p>Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh.</p>
-          <a href="#" class="button">Learn More</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div id="three-column" class="container">
-    <div class="tbox1">
-      <div class="box-style box-style01">
-        <div class="content">
-        <div class="image"><img src="images/img04.jpg" width="324" height="200" alt="" /></div>
-          <h2>Fusce ultrices fringilla</h2>
-          <p>Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh. </p>
-          <a href="#" class="button">Learn More</a>
-        </div>
-      </div>
-    </div>
-    <div class="tbox2">
-      <div class="box-style box-style02">
-        <div class="content">
-          <div class="image"><img src="images/img05.jpg" width="324" height="200" alt="" /></div>
-          <h2>Mauris vulputate dolor</h2>
-          <p>Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh. </p>
-          <a href="#" class="button">Learn More</a>
-        </div>
-      </div>
-    </div>
-    <div class="tbox3">
-      <div class="box-style box-style03">
-        <div class="content">
-          <div class="image"><img src="images/img06.jpg" width="324" height="200" alt="" /></div>
-          <h2>Nulla luctus eleifend </h2>
-          <p>Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh.</p>
-          <a href="#" class="button">Learn More</a>
-        </div>
-      </div>
-    </div>
-  </div>	
-</div>
-<div id="footer">
-  <p>© 2013 Untitled Inc. All rights reserved. Lorem ipsum dolor sit amet nullam blandit consequat phasellus etiam lorem. Design by <a href="http://www.freecsstemplates.org/" rel="nofollow">FreeCSSTemplates.org</a>.  Photos by <a href="http://fotogrph.com/">Fotogrph</a>.</p>
-</div>
-<!-- end #footer -->
+  <%= render 'shared/footer' %>
 </body>
 </html>
