--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -6,7 +6,14 @@
       <li><%= link_to 'Autores' %></li>
       <li><%= link_to 'Sobre Nós' %></li>
       <li><%= link_to 'Contato' %></li>
-      <li><%= link_to 'Entrar', new_user_session_path %></li>
+
+      <% if user_signed_in? %>
+        <li><%= link_to "Bem vindo, #{current_user.email}", edit_user_registration_path %></li>
+        <li><%= link_to "Sair", destroy_user_session_path, method: :delete %></li>
+      <% else %>
+        <li><%= link_to 'Entrar', new_user_session_path %></li>
+        <li><%= link_to 'Cadastre-se', new_user_registration_path %></li>
+      <% end %>
     </ul>
   </div>
 </div>
