--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,15 +1,15 @@
 <div id="three-column" class="container">
-  <% 3.times do |i| %>
-    <% i = i + 1 %>
-    <div class="tbox<%= i %>">
-      <div class="box-style box-style0<%= i%>">
+  <% Recipe.three_last.each_with_index do |recipe, index|%>
+    <% calculed_index = index % 3 + 1 %>
+
+    <div class="tbox<%= calculed_index %>">
+      <div class="box-style box-style0<%= calculed_index %>">
         <div class="content">
           <div class="image">
-            <%= image_tag "img0#{i}.jpg", size: "324x200" %>
+            <%= image_tag "img01.jpg", size: "324x200" %>
           </div>
-          <h2>Receita <%= i %></h2>
-          <p>Aliquam erat volutpat. Pellentesque tristique ante ut risus. Quisque dictum. Integer nisl risus, sagittis convallis, rutrum id, elementum congue, nibh. </p>
-          <a href="#" class="button">Sabia mais ...</a>
+          <h2><%= recipe.title %></h2>
+          <%= link_to "Sabia mais ...", recipe, class: 'button' %>
         </div>
       </div>
     </div>
