--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,11 +1,9 @@
 <div id="menu-wrapper">
   <div id="menu" class="container">
     <ul>
-      <li class="current_page_item"><a href="#">Início</a></li>
-      <li><%= link_to 'Pratos' %></li>
-      <li><%= link_to 'Autores' %></li>
+      <li><%= link_to 'Início', root_path %></li>
+      <li><%= link_to 'Pratos', recipes_path %></li>
       <li><%= link_to 'Sobre Nós' %></li>
-      <li><%= link_to 'Contato' %></li>
 
       <% if user_signed_in? %>
         <li><%= link_to "Bem vindo, #{current_user.email}", edit_user_registration_path %></li>
