--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -3,7 +3,7 @@
       <div class="box-style box-style01">
         <div class="content">
           <div class="image">
-            <%= image_tag "img01.jpg", size: "324x200" %>
+            <%= image_tag @recipe.avatar.url(:medium), size: "324x200" %>
           </div>
         </div>
     </div>
