Corrigido chamada das imagem na home e no model de recipe.

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -4,7 +4,7 @@
       <div class="box-style box-style01">
         <div class="content">
           <div class="image">
-            <%= image_tag "img01.jpg", size: "324x200" %>
+            <%= image_tag recipe.avatar.url(:medium) %>
           </div>
         </div>
       </div>
