--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -6,7 +6,7 @@
       <div class="box-style box-style0<%= calculed_index %>">
         <div class="content">
           <div class="image">
-            <%= image_tag "img01.jpg", size: "324x200" %>
+            <%= image_tag recipe.avatar.url(:medium) %>
           </div>
           <h2><%= recipe.title %></h2>
           <%= link_to "Sabia mais ...", recipe, class: 'button' %>
