Customizando botões das receitas.

--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -9,7 +9,7 @@
             <%= image_tag recipe.avatar.url(:medium) %>
           </div>
           <h2><%= recipe.title %></h2>
-          <%= link_to "Sabia mais ...", recipe, class: 'button' %>
+          <%= link_to "Sabia mais ...", recipe, class: 'btn btn-default btn-lg' %>
         </div>
       </div>
     </div>
