--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -16,7 +16,7 @@
       <div class="box-style box-style02">
         <div class="content">
           <h2><%= recipe.title%></h2>
-          <%= link_to 'Saiba Mais ...', recipe, class: 'button' %>
+          <%= link_to "Sabia mais ...", recipe, class: 'btn btn-default btn-lg' %>
         </div>
       </div>
     </div>
