--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Editar Usuário</h2>
+<h2>Painel de Controle</h2>
 
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= f.error_notification %>
@@ -11,14 +11,15 @@
       <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
     <% end %>
 
-    <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false %>
+    <%= f.input :password, :autocomplete => "off", :required => false %>
     <%= f.input :password_confirmation, :required => false %>
-    <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true %>
+    <%= f.input :current_password, :required => true %>
   </div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Atualizar dados" %>
-  </div>
+  <p class="form-actions">
+    <%= f.button :submit, "Atualizar Meus Dados", class: 'btn btn-primary' %>
+    <%= link_to "Cadastrar Receita", new_recipe_path, class: 'btn btn-default' %>
+    <%= link_to "Minhas Receitas", :back, class: 'btn btn-default' %>
+    <%= link_to "Voltar", :back, class: 'btn btn-default' %>
+  </p>
 <% end %>
-
-<%= link_to "Voltar", :back %>
