--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,8 +10,6 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Enviar" %>
+    <%= f.button :submit, "Enviar", class: 'btn btn-primary' %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
