Página para exibir "Minhas Receitas".
Exibir receitas de terminado usuário logado.

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,7 +19,7 @@
   <p class="form-actions">
     <%= f.button :submit, "Atualizar Meus Dados", class: 'btn btn-primary' %>
     <%= link_to "Cadastrar Receita", new_recipe_path, class: 'btn btn-default' %>
-    <%= link_to "Minhas Receitas", :back, class: 'btn btn-default' %>
+    <%= link_to "Minhas Receitas", my_recipes_path, class: 'btn btn-default' %>
     <%= link_to "Voltar", :back, class: 'btn btn-default' %>
   </p>
 <% end %>
