--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,15 +21,13 @@ Released   : 20130406
   <meta name="description" content="" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>..:: Cardápio Onsee  ::..</title>
-  <link href="http://fonts.googleapis.com/css?family=Oxygen:400,700,300" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div id="wrapper">
     <%= render 'shared/menu' %>
     <div id="page" class="container">
       <%= render 'shared/slogan' %>
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <%= render 'shared/messages' %>
       <%= yield %>
     </div>
   </div>
